const fs = require('fs')
jest.mock('fs')

const writeTree = require('./write-tree')

const destinationPath = './dist'
const copiedFiles = ['index.html', 'favicon.ico']

describe('write-tree', () => {
  afterEach(() => {
    jest.clearAllMocks()
  })

  describe('no categories', () => {
    beforeEach(() => callWriteTree({ categories: null }))

    it('should copy some static files', () => {
      copiedFiles.forEach(file => {
        const fileContent = readFile(`${destinationPath}/${file}`)
        expect(fileContent).toEqual(`copied:./templates/${file}`)
      })
    })

    it('should write an empty readme.md file using the home template', () => {
      const rootReadmeContent = readFile(`${destinationPath}/readme.md`)
      expect(rootReadmeContent).toMatchSnapshot()
    })

    it('should write a sidebar config file using the template', () => {
      const sidebarConfigContent = readFile(`${destinationPath}/_sidebar.md`)
      expect(sidebarConfigContent).toMatchSnapshot()
    })
  })

  describe('one category, one page', () => {
    describe('with text example', () => {
      describe('with special chars values', () => {
        beforeEach(() =>
          callWriteTree({
            categories: [
              {
                folder: 'category',
                name: 'Category',
                domain: 'com.apple.category',
                keys: [
                  {
                    key: 'page',
                    title: 'Page',
                    description: 'Page description.',
                    param: { type: 'string' },
                    examples: [
                      {
                        value: '~/Desktop',
                        default: true,
                        text: 'output when value is ~/Desktop'
                      },
                      {
                        value: '~/Pictures',
                        text: 'output when value is ~/Pictures'
                      }
                    ],
                    versions: ['Catalina']
                  }
                ]
              }
            ]
          })
        )

        it('should copy some static files', () => {
          copiedFiles.forEach(file => {
            const fileContent = readFile(`${destinationPath}/${file}`)
            expect(fileContent).toEqual(`copied:./templates/${file}`)
          })
        })

        it('should write a readme.md file using the home template', () => {
          const rootReadmeContent = readFile(`${destinationPath}/readme.md`)
          expect(rootReadmeContent).toMatchSnapshot()
        })

        it('should write a sidebar config file using the template', () => {
          const sidebarConfigContent = readFile(
            `${destinationPath}/_sidebar.md`
          )
          expect(sidebarConfigContent).toMatchSnapshot()
        })

        it('should write a category/readme.md file using the category template', () => {
          const categoryReadmeContent = readFile(
            `${destinationPath}/category/readme.md`
          )
          expect(categoryReadmeContent).toMatchSnapshot()
        })

        it('should write a category/page.md file using the page template', () => {
          const pageReadmeContent = readFile(
            `${destinationPath}/category/page.md`
          )
          expect(pageReadmeContent).toMatchSnapshot()
        })
      })

      describe('with an after command', () => {
        beforeEach(() =>
          callWriteTree({
            categories: [
              {
                folder: 'category',
                name: 'Category',
                domain: 'com.apple.category',
                keys: [
                  {
                    key: 'page',
                    title: 'Page',
                    description: 'Page description.',
                    param: { type: 'string' },
                    examples: [
                      {
                        value: '~/Desktop',
                        default: true,
                        text: 'output when value is ~/Desktop'
                      },
                      {
                        value: '~/Pictures',
                        text: 'output when value is ~/Pictures'
                      }
                    ],
                    versions: ['Catalina'],
                    after: 'killall App'
                  }
                ]
              }
            ]
          })
        )

        it('should copy some static files', () => {
          copiedFiles.forEach(file => {
            const fileContent = readFile(`${destinationPath}/${file}`)
            expect(fileContent).toEqual(`copied:./templates/${file}`)
          })
        })

        it('should write a readme.md file using the home template', () => {
          const rootReadmeContent = readFile(`${destinationPath}/readme.md`)
          expect(rootReadmeContent).toMatchSnapshot()
        })

        it('should write a sidebar config file using the template', () => {
          const sidebarConfigContent = readFile(
            `${destinationPath}/_sidebar.md`
          )
          expect(sidebarConfigContent).toMatchSnapshot()
        })

        it('should write a category/readme.md file using the category template', () => {
          const categoryReadmeContent = readFile(
            `${destinationPath}/category/readme.md`
          )
          expect(categoryReadmeContent).toMatchSnapshot()
        })

        it('should write a category/page.md file using the page template', () => {
          const pageReadmeContent = readFile(
            `${destinationPath}/category/page.md`
          )
          expect(pageReadmeContent).toMatchSnapshot()
        })
      })
    })

    describe('with text and possible values example', () => {
      beforeEach(() =>
        callWriteTree({
          categories: [
            {
              folder: 'category',
              name: 'Category',
              domain: 'com.apple.category',
              keys: [
                {
                  key: 'page',
                  title: 'Page',
                  description: 'Page description.',
                  param: { type: 'string', values: ['start', 'middle', 'end'] },
                  examples: [
                    {
                      value: 'start',
                      text: 'output when value is start'
                    },
                    {
                      value: 'middle',
                      default: true,
                      text: 'output when value is middle'
                    },
                    {
                      value: 'end',
                      text: 'output when value is end'
                    }
                  ],
                  versions: ['Catalina']
                }
              ]
            }
          ]
        })
      )

      it('should copy some static files', () => {
        copiedFiles.forEach(file => {
          const fileContent = readFile(`${destinationPath}/${file}`)
          expect(fileContent).toEqual(`copied:./templates/${file}`)
        })
      })

      it('should write a readme.md file using the home template', () => {
        const rootReadmeContent = readFile(`${destinationPath}/readme.md`)
        expect(rootReadmeContent).toMatchSnapshot()
      })

      it('should write a sidebar config file using the template', () => {
        const sidebarConfigContent = readFile(
          `${destinationPath}/_sidebar.md`
        )
        expect(sidebarConfigContent).toMatchSnapshot()
      })

      it('should write a category/readme.md file using the category template', () => {
        const categoryReadmeContent = readFile(
          `${destinationPath}/category/readme.md`
        )
        expect(categoryReadmeContent).toMatchSnapshot()
      })

      it('should write a category/page.md file using the page template', () => {
        const pageReadmeContent = readFile(
          `${destinationPath}/category/page.md`
        )
        expect(pageReadmeContent).toMatchSnapshot()
      })
    })

    describe('with image example', () => {
      beforeEach(() =>
        callWriteTree({
          categories: [
            {
              folder: 'category',
              name: 'Category',
              domain: 'com.apple.category',
              keys: [
                {
                  key: 'page',
                  title: 'Page',
                  description: 'Page description.',
                  param: { type: 'bool' },
                  examples: [
                    {
                      value: true,
                      default: true,
                      image: 'true.png'
                    },
                    {
                      value: false,
                      image: 'false.png'
                    }
                  ],
                  versions: ['Catalina']
                }
              ]
            }
          ]
        })
      )

      it('should copy some static files', () => {
        copiedFiles.forEach(file => {
          const fileContent = readFile(`${destinationPath}/${file}`)
          expect(fileContent).toEqual(`copied:./templates/${file}`)
        })
      })

      it('should write a readme.md file using the home template', () => {
        const rootReadmeContent = readFile(`${destinationPath}/readme.md`)
        expect(rootReadmeContent).toMatchSnapshot()
      })

      it('should write a sidebar config file using the template', () => {
        const sidebarConfigContent = readFile(
          `${destinationPath}/_sidebar.md`
        )
        expect(sidebarConfigContent).toMatchSnapshot()
      })

      it('should write a category/readme.md file using the category template', () => {
        const categoryReadmeContent = readFile(
          `${destinationPath}/category/readme.md`
        )
        expect(categoryReadmeContent).toMatchSnapshot()
      })

      it('should write a category/page.md file using the page template', () => {
        const pageReadmeContent = readFile(
          `${destinationPath}/category/page.md`
        )
        expect(pageReadmeContent).toMatchSnapshot()
      })

      it('should copy the true.png example image to a category/category-page-true folder', () => {
        const originImagePath = readFile(
          `${destinationPath}/category/category-page-true.png`
        )
        expect(originImagePath).toMatchInlineSnapshot(
          `"copied:../../images/category/page/true.png"`
        )
      })

      it('should copy the false.png example image to a category/category-page-false folder', () => {
        const originImagePath = readFile(
          `${destinationPath}/category/category-page-false.png`
        )
        expect(originImagePath).toMatchInlineSnapshot(
          `"copied:../../images/category/page/false.png"`
        )
      })
    })
  })

  describe('one category, two pages', () => {
    beforeEach(() =>
      callWriteTree({
        categories: [
          {
            folder: 'category',
            name: 'Category',
            domain: 'com.apple.category',
            keys: [
              {
                key: 'page1',
                title: 'Page 1',
                description: 'Page 1 description.',
                param: { type: 'bool' },
                examples: [
                  {
                    value: true,
                    default: true,
                    text: 'output when value is true'
                  },
                  {
                    value: false,
                    text: 'output when value is false'
                  }
                ],
                versions: ['Catalina']
              },
              {
                key: 'page2',
                title: 'Page 2',
                description: 'Page 2 description.',
                param: { type: 'bool' },
                examples: [
                  {
                    value: true,
                    text: 'output when value is true'
                  },
                  {
                    value: false,
                    default: true,
                    text: 'output when value is false'
                  }
                ],
                versions: ['Catalina']
              }
            ]
          }
        ]
      })
    )

    it('should copy some static files', () => {
      copiedFiles.forEach(file => {
        const fileContent = readFile(`${destinationPath}/${file}`)
        expect(fileContent).toEqual(`copied:./templates/${file}`)
      })
    })

    it('should write a readme.md file using the home template', () => {
      const rootReadmeContent = readFile(`${destinationPath}/readme.md`)
      expect(rootReadmeContent).toMatchSnapshot()
    })

    it('should write a sidebar config file using the template', () => {
      const sidebarConfigContent = readFile(
        `${destinationPath}/_sidebar.md`
      )
      expect(sidebarConfigContent).toMatchSnapshot()
    })

    it('should write a category/readme.md file using the category template', () => {
      const categoryReadmeContent = readFile(
        `${destinationPath}/category/readme.md`
      )
      expect(categoryReadmeContent).toMatchSnapshot()
    })

    it('should write a category/page1.md file using the page template', () => {
      const pageReadmeContent = readFile(`${destinationPath}/category/page1.md`)
      expect(pageReadmeContent).toMatchSnapshot()
    })

    it('should write a category/page2.md file using the page template', () => {
      const pageReadmeContent = readFile(`${destinationPath}/category/page2.md`)
      expect(pageReadmeContent).toMatchSnapshot()
    })
  })

  describe('two categories, one page in each', () => {
    beforeEach(() =>
      callWriteTree({
        categories: [
          {
            folder: 'category1',
            name: 'Category 1',
            domain: 'com.apple.category1',
            keys: [
              {
                key: 'page',
                title: 'Page',
                description: 'Page description.',
                param: { type: 'bool' },
                examples: [
                  {
                    value: true,
                    default: true,
                    text: 'output when value is true'
                  },
                  {
                    value: false,
                    text: 'output when value is false'
                  }
                ],
                versions: ['Catalina']
              }
            ]
          },
          {
            folder: 'category2',
            name: 'Category 2',
            domain: 'com.apple.category2',
            keys: [
              {
                key: 'page',
                title: 'Page',
                description: 'Page description.',
                param: { type: 'bool' },
                examples: [
                  {
                    value: true,
                    text: 'output when value is true'
                  },
                  {
                    value: false,
                    default: true,
                    text: 'output when value is false'
                  }
                ],
                versions: ['Catalina']
              }
            ]
          }
        ]
      })
    )

    it('should copy some static files', () => {
      copiedFiles.forEach(file => {
        const fileContent = readFile(`${destinationPath}/${file}`)
        expect(fileContent).toEqual(`copied:./templates/${file}`)
      })
    })

    it('should write a readme.md file using the home template', () => {
      const rootReadmeContent = readFile(`${destinationPath}/readme.md`)
      expect(rootReadmeContent).toMatchSnapshot()
    })

    it('should write a sidebar config file using the template', () => {
      const sidebarConfigContent = readFile(
        `${destinationPath}/_sidebar.md`
      )
      expect(sidebarConfigContent).toMatchSnapshot()
    })

    it('should write a category1/readme.md file using the category template', () => {
      const categoryReadmeContent = readFile(
        `${destinationPath}/category1/readme.md`
      )
      expect(categoryReadmeContent).toMatchSnapshot()
    })

    it('should write a category2/readme.md file using the category template', () => {
      const categoryReadmeContent = readFile(
        `${destinationPath}/category2/readme.md`
      )
      expect(categoryReadmeContent).toMatchSnapshot()
    })

    it('should write a category1/page.md file using the page template', () => {
      const pageReadmeContent = readFile(`${destinationPath}/category1/page.md`)
      expect(pageReadmeContent).toMatchSnapshot()
    })

    it('should write a category2/page.md file using the page template', () => {
      const pageReadmeContent = readFile(`${destinationPath}/category2/page.md`)
      expect(pageReadmeContent).toMatchSnapshot()
    })
  })
})

const callWriteTree = sourceFile => writeTree(sourceFile, destinationPath)
const readFile = file => fs.readFakeFileSync(file, 'utf8')
