// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`write-tree no categories should write a sidebar config file using the template 1`] = `
"* [Home](/)
"
`;

exports[`write-tree no categories should write an empty readme.md file using the home template 1`] = `
"# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I do the same?
Thank you! I built it using [docsify](https://docsify.js.org/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docsify#readme) if you want to use it.
"
`;

exports[`write-tree one category, one page with image example should write a category/page.md file using the page template 1`] = `
"# Page

> Page description.

- **Work on macOS**: Catalina
- **App**: com.apple.category
- **Rule**: page
- **Parameter type**: bool

## Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category page -bool true
\`\`\`
![Example output with value set to true](./category-page-true.png)

## Set to \`false\`
\`\`\`bash
defaults write com.apple.category page -bool false
\`\`\`
![Example output with value set to false](./category-page-false.png)

## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-tree one category, one page with image example should write a category/readme.md file using the category template 1`] = `
"# Category

- [Page](category/page)
"
`;

exports[`write-tree one category, one page with image example should write a readme.md file using the home template 1`] = `
"# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category
- [Page](category/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I do the same?
Thank you! I built it using [docsify](https://docsify.js.org/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docsify#readme) if you want to use it.
"
`;

exports[`write-tree one category, one page with image example should write a sidebar config file using the template 1`] = `
"* [Home](/)
* [Category](category/)
 - [Page](category/page)
"
`;

exports[`write-tree one category, one page with text and possible values example should write a category/page.md file using the page template 1`] = `
"# Page

> Page description.

- **Work on macOS**: Catalina
- **App**: com.apple.category
- **Rule**: page
- **Parameter type**: string
  * start
  * middle
  * end

## Set to \`start\`
\`\`\`bash
defaults write com.apple.category page -string start
\`\`\`
- output when value is start

## Set to \`middle\` (default value)
\`\`\`bash
defaults write com.apple.category page -string middle
\`\`\`
- output when value is middle

## Set to \`end\`
\`\`\`bash
defaults write com.apple.category page -string end
\`\`\`
- output when value is end

## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-tree one category, one page with text and possible values example should write a category/readme.md file using the category template 1`] = `
"# Category

- [Page](category/page)
"
`;

exports[`write-tree one category, one page with text and possible values example should write a readme.md file using the home template 1`] = `
"# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category
- [Page](category/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I do the same?
Thank you! I built it using [docsify](https://docsify.js.org/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docsify#readme) if you want to use it.
"
`;

exports[`write-tree one category, one page with text and possible values example should write a sidebar config file using the template 1`] = `
"* [Home](/)
* [Category](category/)
 - [Page](category/page)
"
`;

exports[`write-tree one category, one page with text example with an after command should write a category/page.md file using the page template 1`] = `
"# Page

> Page description.

- **Work on macOS**: Catalina
- **App**: com.apple.category
- **Rule**: page
- **Parameter type**: string

## Set to \`~/Desktop\` (default value)
\`\`\`bash
defaults write com.apple.category page -string ~/Desktop && killall App
\`\`\`
- output when value is ~/Desktop

## Set to \`~/Pictures\`
\`\`\`bash
defaults write com.apple.category page -string ~/Pictures && killall App
\`\`\`
- output when value is ~/Pictures

## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page && killall App
\`\`\`
"
`;

exports[`write-tree one category, one page with text example with an after command should write a category/readme.md file using the category template 1`] = `
"# Category

- [Page](category/page)
"
`;

exports[`write-tree one category, one page with text example with an after command should write a readme.md file using the home template 1`] = `
"# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category
- [Page](category/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I do the same?
Thank you! I built it using [docsify](https://docsify.js.org/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docsify#readme) if you want to use it.
"
`;

exports[`write-tree one category, one page with text example with an after command should write a sidebar config file using the template 1`] = `
"* [Home](/)
* [Category](category/)
 - [Page](category/page)
"
`;

exports[`write-tree one category, one page with text example with special chars values should write a category/page.md file using the page template 1`] = `
"# Page

> Page description.

- **Work on macOS**: Catalina
- **App**: com.apple.category
- **Rule**: page
- **Parameter type**: string

## Set to \`~/Desktop\` (default value)
\`\`\`bash
defaults write com.apple.category page -string ~/Desktop
\`\`\`
- output when value is ~/Desktop

## Set to \`~/Pictures\`
\`\`\`bash
defaults write com.apple.category page -string ~/Pictures
\`\`\`
- output when value is ~/Pictures

## Read current value
\`\`\`bash
defaults read com.apple.category page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page
\`\`\`
"
`;

exports[`write-tree one category, one page with text example with special chars values should write a category/readme.md file using the category template 1`] = `
"# Category

- [Page](category/page)
"
`;

exports[`write-tree one category, one page with text example with special chars values should write a readme.md file using the home template 1`] = `
"# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category
- [Page](category/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I do the same?
Thank you! I built it using [docsify](https://docsify.js.org/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docsify#readme) if you want to use it.
"
`;

exports[`write-tree one category, one page with text example with special chars values should write a sidebar config file using the template 1`] = `
"* [Home](/)
* [Category](category/)
 - [Page](category/page)
"
`;

exports[`write-tree one category, two pages should write a category/page1.md file using the page template 1`] = `
"# Page 1

> Page 1 description.

- **Work on macOS**: Catalina
- **App**: com.apple.category
- **Rule**: page1
- **Parameter type**: bool

## Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category page1 -bool true
\`\`\`
- output when value is true

## Set to \`false\`
\`\`\`bash
defaults write com.apple.category page1 -bool false
\`\`\`
- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category page1
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page1
\`\`\`
"
`;

exports[`write-tree one category, two pages should write a category/page2.md file using the page template 1`] = `
"# Page 2

> Page 2 description.

- **Work on macOS**: Catalina
- **App**: com.apple.category
- **Rule**: page2
- **Parameter type**: bool

## Set to \`true\`
\`\`\`bash
defaults write com.apple.category page2 -bool true
\`\`\`
- output when value is true

## Set to \`false\` (default value)
\`\`\`bash
defaults write com.apple.category page2 -bool false
\`\`\`
- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category page2
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category page2
\`\`\`
"
`;

exports[`write-tree one category, two pages should write a category/readme.md file using the category template 1`] = `
"# Category

- [Page 1](category/page1)
- [Page 2](category/page2)
"
`;

exports[`write-tree one category, two pages should write a readme.md file using the home template 1`] = `
"# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category
- [Page 1](category/page1)
- [Page 2](category/page2)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I do the same?
Thank you! I built it using [docsify](https://docsify.js.org/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docsify#readme) if you want to use it.
"
`;

exports[`write-tree one category, two pages should write a sidebar config file using the template 1`] = `
"* [Home](/)
* [Category](category/)
 - [Page 1](category/page1)
 - [Page 2](category/page2)
"
`;

exports[`write-tree two categories, one page in each should write a category1/page.md file using the page template 1`] = `
"# Page

> Page description.

- **Work on macOS**: Catalina
- **App**: com.apple.category1
- **Rule**: page
- **Parameter type**: bool

## Set to \`true\` (default value)
\`\`\`bash
defaults write com.apple.category1 page -bool true
\`\`\`
- output when value is true

## Set to \`false\`
\`\`\`bash
defaults write com.apple.category1 page -bool false
\`\`\`
- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category1 page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category1 page
\`\`\`
"
`;

exports[`write-tree two categories, one page in each should write a category1/readme.md file using the category template 1`] = `
"# Category 1

- [Page](category1/page)
"
`;

exports[`write-tree two categories, one page in each should write a category2/page.md file using the page template 1`] = `
"# Page

> Page description.

- **Work on macOS**: Catalina
- **App**: com.apple.category2
- **Rule**: page
- **Parameter type**: bool

## Set to \`true\`
\`\`\`bash
defaults write com.apple.category2 page -bool true
\`\`\`
- output when value is true

## Set to \`false\` (default value)
\`\`\`bash
defaults write com.apple.category2 page -bool false
\`\`\`
- output when value is false

## Read current value
\`\`\`bash
defaults read com.apple.category2 page
\`\`\`

## Delete current value
\`\`\`bash
defaults delete com.apple.category2 page
\`\`\`
"
`;

exports[`write-tree two categories, one page in each should write a category2/readme.md file using the category template 1`] = `
"# Category 2

- [Page](category2/page)
"
`;

exports[`write-tree two categories, one page in each should write a readme.md file using the home template 1`] = `
"# macOS \`defaults\` list
Uncomplete list of macOS \`defaults\` commands with demos ✨

## Category 1
- [Page](category1/page)

## Category 2
- [Page](category2/page)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults-list/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults-list/#readme) like this one.

## ❤️ I like this website, how can I do the same?
Thank you! I built it using [docsify](https://docsify.js.org/). Take a look at [my report](https://github.com/yannbertrand/macos-defaults-list/tree/master/build/docsify#readme) if you want to use it.
"
`;

exports[`write-tree two categories, one page in each should write a sidebar config file using the template 1`] = `
"* [Home](/)
* [Category 1](category1/)
 - [Page](category1/page)
* [Category 2](category2/)
 - [Page](category2/page)
"
`;
